--- a/AdrianPrimerParcialAP2/_Imports.razor
+++ b/AdrianPrimerParcialAP2/_Imports.razor
@@ -7,3 +7,7 @@
 @using Microsoft.JSInterop
 @using AdrianPrimerParcialAP2
 @using AdrianPrimerParcialAP2.Shared
+@using AdrianPrimerParcialAP2.BLL
+@using AdrianPrimerParcialAP2.Models
+@using Blazored.Toast
+@using Blazored.Toast.Services
