--- a/AdrianPrimerParcialAP2/Shared/NavMenu.razor
+++ b/AdrianPrimerParcialAP2/Shared/NavMenu.razor
@@ -17,6 +17,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Registro Productos
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="consulta-productos">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Productos
+            </NavLink>
+        </li>
     </ul>
 </div>
 
