--- a/AdrianPrimerParcialAP2/Pages/Consultas/ConsultaProductos.razor
+++ b/AdrianPrimerParcialAP2/Pages/Consultas/ConsultaProductos.razor
@@ -1,4 +1,5 @@
 ﻿@page "/consulta-productos"
+@inject NavigationManager Nav
 
 <div class="form-row mb-3">
     <div class="col-sm-4">
@@ -32,6 +33,7 @@
                 <th>Precio</th>
                 <th>Existencia</th>
                 <th>Valor Inventario</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -42,6 +44,7 @@
                 <td>@string.Format("{0:c}" , producto.Precio)</td>
                 <td>@producto.Existencia</td>
                 <td>@string.Format("{0:c}" , producto.ValorInventario)</td>
+                <td><button @onclick="()=>VerProducto(producto.Id)" class="btn btn-warning">Ver</button></td>
             </tr>
             }
         </tbody>
@@ -59,6 +62,10 @@
     protected async override Task OnInitializedAsync() {
         Productos = await ProductosBLL.GetProductos();
         ProductosFiltrados = Productos;
+    }
+
+    void VerProducto(int id) {
+        Nav.NavigateTo($"registro-productos/{id}");
     }
 
     void FiltrarProductos() {
